--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Roboto;
+    font-family: Jost;
 }
 
 :root {
@@ -16,8 +16,11 @@
 body {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     height: 100vh;
-    background-color: var(--myrtle-green);
+    background-image: url(/images/space.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 header,
@@ -26,6 +29,8 @@ footer {
     display: flex;
     place-content: center;
     place-items: center;
+    background-color: white;
+    font-weight: 500;
 }
 
 header {
@@ -33,8 +38,8 @@ header {
 }
 
 header h1 {
-    letter-spacing: 3px;
-    font-weight: 400;
+    letter-spacing: 4px;
+    font-weight: 500;
     font-size: medium;
     color: var(--cerulean);
 }
@@ -45,7 +50,7 @@ footer {
 
 footer ul li {
     display: inline;
-    letter-spacing: 1px;
+    letter-spacing: 4px;
 }
 
 footer li {
@@ -70,14 +75,13 @@ main {
     flex-direction: column;
     place-content: center;
     place-items: center;
-    min-width: 90%;
-    height: 80%;
-    
+    /* min-width: 95%; */
+    height: 90%;
 }
 
 .projectContainer h2 {
-    font-size: 6em;
-    font-style: italic;
+    font-size: 4.8em;
+    font-style:italic;
     font-weight: 900;
     background: url('/images/space.jpg');
     background-position: center;
@@ -86,14 +90,25 @@ main {
     background-clip: text;
     color: transparent;
     filter: drop-shadow(0 0 1px var(--yale-blue));
+    /* transform: skewX(10deg); */
+    user-select: none;
+}
+
+.title {
+    display: flex;
+    place-content: center;
+    background-color: white;
+    min-width: 300px;
+    /* transform: skewX(-09deg); */
 }
 
 /* form styles */
 
 form {
-    display: flex row;
+    display: flex;
     place-items: center;
-    margin-top: 15px;
+    place-content: center;
+    margin-top: 10px;
 }
 
 form input{
@@ -101,23 +116,49 @@ form input{
     border: none;
     border-radius: 5px;
     filter: drop-shadow(0 0 1px var(--cerulean));
+    width: 240px;
+}
+
+.listContainer {
+    display: flex column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    min-width: 300px;
+    height: 500px;
+    margin: 20px 0 0 0;
+    padding: 10px;
 }
 
 ol {
-    margin-top: 15px;
+    margin-top: 10px;
+
 }
 
 ol li {
     margin: 5px 0;
-    background-color: ;
+    color: var(--cerulean);
+    background-color: white;
+    list-style: decimal inside;
 }
 
-#button {
-    display: inline;
+.buttons {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 10px 0;
+}
+
+#button, #trash {
+    display: inline-block;
     color: var(--cerulean);
     transition: color 200ms ease-in-out;
 }
 
 #button:hover{
+    color: var(--yale-blue);
+}
+
+#trash:hover{
     color: var(--yale-blue);
 }
