--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
     flex-direction: column;
     justify-content: center;
     height: 100vh;
-    background-image: url(/images/space.jpg);
+    background-image: url(./images/space.jpg);
     background-size: cover;
     background-position: center;
 }
